fix:Clean up the response request